# aranae

./: .env.example  .gitignore  .sqlfluff  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  dashboard.py  docker-compose.yml  opencode.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.opencode/agents/: analytics.md  dashboard.md  devops.md  docs.md  scraper.md
agents/: data_quality.py
aranae/: configuration.py  definitions.py  resources.py
aranae/assets/: dbt.py
assets/: style.css
dagster_app/: configuration.py  constants.py  definitions.py  io_managers.py  resources.py
dagster_app/assets/: dbt.py  ingestion.py
dbt/: .gitignore  .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: categorize_experience.sql  extract_income.sql  format_wttj_salary.sql  job_tags.sql  normalize_city.sql  normalize_date.sql  normalize_experience.sql  skills.sql
dbt/models/: sources.yml
dbt/models/mart/: fct_jobs.sql  fct_jobs.yml  schema.yml
dbt/models/source/free_work/: int_freework__jobs.sql  int_freework__jobs.yml  pvt_freework_jobs.sql  pvt_freework_jobs.yml  sources.yml  stg_freework__jobs.yml  stg_freework_jobs.sql  stg_freework_jobs.yml
dbt/models/source/free_work/pivot/: pivot_freework.sql  pivot_freework.yml
dbt/models/source/free_work/raw/: raw_freework.sql  (+1 more)
dbt/models/source/wttj/: int_wttj__jobs.sql  int_wttj__jobs.yml  pvt_wttj_jobs.sql  pvt_wttj_jobs.yml  sources.yml  stg_wttj__jobs.yml  stg_wttj_jobs.sql  stg_wttj_jobs.yml
dbt/models/staging/free_work/: stg_freework_jobs.sql
dbt/seeds/: sources_metadatas.csv
models/: schemas.py
scrapers/: __init__.py  config.py  freework.py  freework_scraper.py  test_crawl4ai.py  utils.py  wttj_scraper.py
scripts/: setup_db.py
services/: database.py  db.py  ingestor.py  langsmith_client.py  transformers.py
tests/: test_schemas.py  test_transformers.py
(+2 files in other folders)
