[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aranae"
version = "0.1.0"
authors = [
  { name="spideystreet", email="dhicham.pro@gmail.com" },
]
description = "Jobs analysis pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagster",
    "dagster-webserver",
    "dagster-dbt",
    "dbt-core",
    "dbt-postgres",
    "pandas",
    "requests",
    "beautifulsoup4",
    "python-dotenv",
    "mistralai",
    "psycopg2-binary",
    "sqlalchemy",
    "streamlit",
    "playwright",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["scrapers", "dagster_app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [".venv", "dbt/target"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "PTH", "BLE"]

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["T201", "INP001", "BLE001"]
"**/__init__.py" = ["I001", "F401"]
"tests/**" = ["E501"]
"scrapers/**" = ["T201", "BLE001", "E501"]
"services/**" = ["T201", "BLE001", "E501"]
"dashboard.py" = ["BLE001", "E501"]
